--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Friendly Neighbourhood Spiderman!!</h1>
+    <div class="spidy__sleeping"> 
+        <img src="./spidy.jpg" / id="logo"> </div>
     
 </body>
 </html>
