spiderman new img added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <body>
     <h1>Friendly Neighbourhood Spiderman!!</h1>
     <div class="spidy__sleeping"> 
-        <img src="./spidy.jpg" / id="logo"> </div>
+        <img src="./spidy.jpg" / id="logo" /> </div>
+        <div class="main">
+            <div id="inside
+            "><h2>SPIDER-MAN</h2>
+            <img src="./spidyyy-removebg-preview.png" id="tomimg" />
+            <p>With amazing spider-like abilities, teenage science whiz Peter Parker fights crime and dreams of becoming an Avenger as Spider-Man.</p>
+            
+        </div>
+            </div>
     
 </body>
 </html>
